--- a/src/scss/comporents/_product.scss
+++ b/src/scss/comporents/_product.scss
@@ -10,10 +10,17 @@
         height: 424px;
         width: 100%;
         position: relative;
+        overflow: hidden;
         img{
             height: 424px;
             width: 100%;
             object-fit: cover;
+            transition: all .3s;
+            cursor: pointer;
+        }
+        &:hover img{
+            transform: scale(1.2);
+            display: block;
         }
         .label{
             position: absolute;
