--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -10,6 +10,7 @@
     background-repeat: no-repeat;
     width: 100%;
     height: auto;
+
     &-wrapper {
         position: relative;
 
@@ -50,10 +51,12 @@
 .banner-slider-right {
     position: relative;
     max-width: max-content;
-    img{
+
+    img {
         width: 100%;
         height: auto;
     }
+
     .info {
         position: absolute;
         top: -50px;
@@ -67,12 +70,14 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        .amount{
+
+        .amount {
             color: #F05C52;
             font-weight: bold;
             font-size: 36px;
             margin-bottom: 2px;
         }
+
         .text {
             color: $primary;
             font-size: 14px;
@@ -81,24 +86,28 @@
     }
 }
 
-.our-products{
+.our-products {
     padding-top: 50px;
     width: 100%;
     height: auto;
-    .section-header{
+
+    .section-header {
         justify-content: center;
         margin-bottom: 0;
-        h2{
+
+        h2 {
             font-size: 32px;
             font-weight: 600;
             color: $primary;
             margin-bottom: 5px;
         }
     }
-    .products-filter{
+
+    .products-filter {
         margin-bottom: 40px;
     }
-    .product-item{
+
+    .product-item {
         margin-bottom: 40px;
     }
 }
@@ -106,45 +115,50 @@
 
 @media screen and (max-width: 992px) {
     .banner {
-        .slider-arrows{
+        .slider-arrows {
             display: none;
         }
-     .banner-slider-left {
-         .subtitle {
-             font-size: 12px;
-         }
- 
-         h1 {
-             font-size: 45px;
-         }
-     }
- }
 
- .quick-feature{
-    &-wrapper{
-        width: calc(100% + 23%);
-        margin-left: -79px;
-        .quickfeature-item{
-            padding: 50px 0px;
+        .banner-slider-left {
+            .subtitle {
+                font-size: 12px;
+            }
 
+            h1 {
+                font-size: 45px;
+            }
         }
     }
-        .quickfeature-item{
-            .content{
-                h3{
+
+    .quick-feature {
+        &-wrapper {
+            width: calc(100% + 23%);
+            margin-left: -79px;
+
+            .quickfeature-item {
+                padding: 50px 0px;
+
+            }
+        }
+
+        .quickfeature-item {
+            .content {
+                h3 {
                     font-size: 13px;
                 }
-                p { 
+
+                p {
                     font-size: 12px;
                 }
             }
         }
     }
 
-    .client-main{
-        .client-diplay-main{
+    .client-main {
+        .client-diplay-main {
             flex-direction: column;
-            .client-item{
+
+            .client-item {
                 width: 100%;
                 height: auto;
                 margin-bottom: 23px;
@@ -152,356 +166,385 @@
         }
     }
 
-    .icon-button{
+    .icon-button {
         margin-right: 14px;
     }
 
-    .logo-cloud{
-        &-wrapper{
+    .logo-cloud {
+        &-wrapper {
             gap: 20px;
         }
     }
 }
 
-@media screen and (max-width: 768px){
-    .subheader{
+@media screen and (max-width: 768px) {
+    .subheader {
         display: none;
     }
-    .main-header{
+
+    .main-header {
         display: none;
     }
 
     .banner {
-     .banner-slider-left {
-         .subtitle {
-             font-size: 13px;
-         }
- 
-         h1 {
-            font-size: 35px;
-         }
-     }
- }
-
- .quick-feature{
-    &-wrapper{
-        .quickfeature-item{
-            font-size: 12px;
-            width: 128%;
-            padding: 26px 5px;
-        }
-    }
-}
-
-.section-header{
-    h3{
-        font-size: 24px;
-    }
-}
-
- .icon-button{
-    padding: 11px 14px;
-    font-size: 14px;
-
- }
-
- .product-item{
-    .image{
-        img{
-        }
-        .label{
-        }
-        .icon-button{
-        }
-    }
-    .content{
-        display: flex;
-        align-items: center;
-        .info{
-            margin-right: 87px;
-        }
-    }
-}
-
-.client-main{
-    .client-diplay-main{
-    .client-item{
-        .client-content{
-            .border-left{
-                p { 
-                    font-size: 16px;
-
-                }
+        .banner-slider-left {
+            .subtitle {
+                font-size: 13px;
             }
-            .image{
-                img{
-                }
+
+            h1 {
+                font-size: 35px;
             }
-            .client{
-                .quickfeature-item{
-                    .clinet-title-main{
-                        h5{
-                            font-size: 17px;
+        }
+    }
+
+    .quick-feature {
+        &-wrapper {
+            .quickfeature-item {
+                font-size: 12px;
+                width: 128%;
+                padding: 26px 5px;
+            }
+        }
+    }
+
+    .section-header {
+        h3 {
+            font-size: 24px;
+        }
+    }
+
+    .icon-button {
+        padding: 11px 14px;
+        font-size: 14px;
+
+    }
+
+    .product-item {
+        .image {
+            img {}
+
+            .label {}
+
+            .icon-button {}
+        }
+
+        .content {
+            display: flex;
+            align-items: center;
+
+            .info {
+                margin-right: 87px;
+            }
+        }
+    }
+
+    .client-main {
+        .client-diplay-main {
+            .client-item {
+                .client-content {
+                    .border-left {
+                        p {
+                            font-size: 16px;
+
                         }
                     }
-                    .image{
-                    h4{
+
+                    .image {
+                        img {}
                     }
 
+                    .client {
+                        .quickfeature-item {
+                            .clinet-title-main {
+                                h5 {
+                                    font-size: 17px;
+                                }
+                            }
+
+                            .image {
+                                h4 {}
+
+                            }
+                        }
+                    }
                 }
             }
         }
+
+
+
     }
-}
-}
 
-
-
-}
-
-.catagroy-item .content{
-    small{
-        font-size: 14px
+    .catagroy-item .content {
+        small {
+            font-size: 14px
         }
-    h3{
-        font-size: 15px;
-    }
-}
 
-.our-products .section-header h2{
-    font-size: 27px;
-}
-.products-filter{
-    li{
-        a{
-            font-size: 14px;
+        h3 {
+            font-size: 15px;
         }
     }
-}
 
-.footer-main .footer-number{
-    margin-bottom: 21px;
-}
+    .our-products .section-header h2 {
+        font-size: 27px;
+    }
 
-.slider-arrow{
-    display: none;
-}
+    .products-filter {
+        li {
+            a {
+                font-size: 14px;
+            }
+        }
+    }
+
+    .footer-main .footer-number {
+        margin-bottom: 21px;
+    }
+
+    .slider-arrow {
+        display: none;
+    }
 
 }
 
 @media screen and (max-width: 600px) {
     .banner {
-        .slider-arrows{
-        }
-     .banner-slider-left {
-         .subtitle {
-            font-size: 11px;
-            margin-bottom: 7px;
-         }
- 
-         h1 {
-             font-size: 25px;
-         }
-         .button {
-            font-size: 14px;
-            padding: 12px 12px;
-            svg{
-                margin-left: 5px;
+        .slider-arrows {}
+
+        .banner-slider-left {
+            .subtitle {
+                font-size: 11px;
+                margin-bottom: 7px;
             }
-         }
-     }
 
-     .banner-slider-right{
-         .info{
-             .amount{
-                font-size: 27px;
-             }
-         } 
-    }
-        
-        
- }
+            h1 {
+                font-size: 25px;
+            }
 
- .quick-feature-wrapper{
-    width: 100%;
-    margin-left: 0px;
-    display: none;
- }
+            .button {
+                font-size: 12px;
+                padding: 8px 9px;
 
- .product-item{
-    .content{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
- }
-
- .client-diplay-main{
-    width: calc(100% + 23%);
-    margin-left: -25px;
- }
-
- .footer-main{
-    .footer-input{
-        margin-right: 20px;
-        h3{
-            margin-top: 20px;
-        }
-    }
-    .footer-number{
-        margin-bottom: 22px;
-     }
-    
-     .footer-icon{
-        margin-bottom: 25px;
-     }
-    
-     .catagroy-item{
-        
-        h3{
-            
-    margin-top: 22px;
-
-        }
-    
-     }
- }
-
-
- .section-header {
-    h3{
-        font-size: 22px;
-        text-align: center;
-    }
- }
-
- .slider-arrow{
-    display: none;
- }
-
- .client-main{
-    .client-diplay-main{
-    .client-item{
-        .client-content{
-            .border-left{
-                p { 
-                    font-size: 16px;
-
+                svg {
+                    margin-left: 5px;
                 }
             }
-            .image{
-                img{
+        }
+
+        .banner-slider-right {
+            .info {
+                .amount {
+                    font-size: 27px;
                 }
             }
-            .client{
-                .quickfeature-item{
-                    .clinet-title-main{
-                        h5{
-                            font-size: 17px;
+        }
+
+
+    }
+
+    .quick-feature-wrapper {
+        width: 100%;
+        margin-left: 0px;
+        display: none;
+    }
+
+    .product-item {
+        .content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+
+    .client-diplay-main {
+        width: calc(100% + 23%);
+        margin-left: -25px;
+    }
+
+    .footer-main {
+        .footer-input {
+            margin-right: 20px;
+
+            h3 {
+                margin-top: 20px;
+            }
+        }
+
+        .footer-number {
+            margin-bottom: 22px;
+        }
+
+        .footer-icon {
+            margin-bottom: 25px;
+        }
+
+        .catagroy-item {
+
+            h3 {
+
+                margin-top: 22px;
+
+            }
+
+        }
+    }
+
+
+    .section-header {
+        h3 {
+            font-size: 22px;
+            text-align: center;
+        }
+    }
+
+    .slider-arrow {
+        display: none;
+    }
+
+    .client-main {
+        .client-diplay-main {
+            .client-item {
+                width: calc(100% + 12%);
+                .client-content {
+                    .border-left {
+                        p {
+                            font-size: 12px;
+
                         }
                     }
-                    .image{
-                    h4{
+
+                    .image {
+                        img {}
                     }
 
+                    .client {
+                        .quickfeature-item {
+                            .clinet-title-main {
+                                h5 {
+                                    font-size: 14px;
+                                }
+                            }
+
+                            .image {
+                                h4 {}
+
+                            }
+                        }
+                    }
                 }
             }
         }
+
+
+
     }
-}
-}
 
+    .products-filter {
+        li {
+            a {
 
+                font-size: 11px;
+                margin-right: 3px;
 
-}
+            }
+        }
+    }
 
 }
 
 
 @media screen and (max-width: 420px) {
 
-    .client-main{
-        .client-diplay-main{
+    .client-main {
+        .client-diplay-main {
             width: calc(100% + 48%);
-        .client-item{
-            .client-content{
-                .border-left{
-                    p { 
-                        font-size: 12px;
-                    }
-                }
-                .image{
-                    img{
-                    }
-                }
-                .client{
-                    .quickfeature-item{
-                        .client-icon{
-                            display: none;
+
+            .client-item {
+                .client-content {
+                    .border-left {
+                        p {
+                            font-size: 12px;
                         }
-                        .clinet-title-main{
-                            .client-content-title{
-                                p{
-                                    font-size: 12px;
+                    }
+
+                    .image {
+                        img {}
+                    }
+
+                    .client {
+                        .quickfeature-item {
+                            .client-icon {
+                                display: none;
+                            }
+
+                            .clinet-title-main {
+                                .client-content-title {
+                                    p {
+                                        font-size: 12px;
+                                    }
+                                }
+
+                                h5 {
+                                    font-size: 11px;
                                 }
                             }
-                            h5{
-                                font-size: 11px;
+
+                            .image {
+                                h4 {}
+
                             }
                         }
-                        .image{
-                        h4{
-                        }
-    
                     }
                 }
             }
+
         }
-    }
-    
-    }
-    
 
-    
-    
+
+
+
     }
 
 
-        .products-filter{
-            li{
-                a{
-                   
-    font-size: 11px;
-    margin-right: 3px;
+    .products-filter {
+        li {
+            a {
 
-                }
+                font-size: 11px;
+                margin-right: 3px;
+
             }
         }
-    
-    .footer-main{
-        p{
+    }
+
+    .footer-main {
+        p {
             font-size: 14px;
         }
-        .catagroy-item{
-            li{
-                a{
+
+        .catagroy-item {
+            li {
+                a {
                     font-size: 14px;
                 }
             }
-            .footer-img{
-                p{
-                    
-                font-size: 14px;
-        
+
+            .footer-img {
+                p {
+
+                    font-size: 14px;
+
                 }
             }
-           }
-           .footer-input{
-            p{
+        }
+
+        .footer-input {
+            p {
                 font-size: 15px;
                 width: 86%;
             }
-           }
+        }
     }
 
 
